--- a/STM32_Audio_Input_Device/STM32_Audio_Input_Device.ioc
+++ b/STM32_Audio_Input_Device/STM32_Audio_Input_Device.ioc
@@ -1,27 +1,49 @@
 #MicroXplorer Configuration settings - do not modify
+DAC.DAC_Trigger=DAC_TRIGGER_T2_TRGO
+DAC.IPParameters=DAC_Trigger
+Dma.DAC_CH1.0.Direction=DMA_MEMORY_TO_PERIPH
+Dma.DAC_CH1.0.Instance=DMA1_Channel3
+Dma.DAC_CH1.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.DAC_CH1.0.MemInc=DMA_MINC_ENABLE
+Dma.DAC_CH1.0.Mode=DMA_NORMAL
+Dma.DAC_CH1.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.DAC_CH1.0.PeriphInc=DMA_PINC_DISABLE
+Dma.DAC_CH1.0.Priority=DMA_PRIORITY_LOW
+Dma.DAC_CH1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.Request0=DAC_CH1
+Dma.RequestsNb=1
 File.Version=6
 KeepUserPlacement=false
 Mcu.Family=STM32F0
-Mcu.IP0=NVIC
-Mcu.IP1=RCC
-Mcu.IP2=SYS
-Mcu.IP3=USB
-Mcu.IP4=USB_DEVICE
-Mcu.IPNb=5
+Mcu.IP0=DAC
+Mcu.IP1=DMA
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=SYS
+Mcu.IP5=TIM2
+Mcu.IP6=USB
+Mcu.IP7=USB_DEVICE
+Mcu.IPNb=8
 Mcu.Name=STM32F072C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin2=PA11
-Mcu.Pin3=PA12
-Mcu.Pin4=VP_SYS_VS_Systick
-Mcu.Pin5=VP_USB_DEVICE_VS_USB_DEVICE_AUDIO_FS
-Mcu.PinsNb=6
+Mcu.Pin10=VP_USB_DEVICE_VS_USB_DEVICE_AUDIO_FS
+Mcu.Pin2=PA4
+Mcu.Pin3=PA11
+Mcu.Pin4=PA12
+Mcu.Pin5=PA13
+Mcu.Pin6=PA14
+Mcu.Pin7=VP_SYS_VS_Systick
+Mcu.Pin8=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin9=VP_TIM2_VS_no_output1
+Mcu.PinsNb=11
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F072CBTx
 MxCube.Version=5.5.0
 MxDb.Version=DB.5.0.50
+NVIC.DMA1_Channel2_3_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -33,6 +55,11 @@ PA11.Mode=Device
 PA11.Signal=USB_DM
 PA12.Mode=Device
 PA12.Signal=USB_DP
+PA13.Mode=Serial_Wire
+PA13.Signal=SYS_SWDIO
+PA14.Mode=Serial_Wire
+PA14.Signal=SYS_SWCLK
+PA4.Signal=COMP_DAC1_group
 PC13.GPIOParameters=GPIO_Label
 PC13.GPIO_Label=LED1
 PC13.Locked=true
@@ -76,7 +103,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,5-MX_DAC_Init-DAC-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true
 RCC.AHBFreq_Value=48000000
 RCC.APB1Freq_Value=48000000
 RCC.APB1TimFreq_Value=48000000
@@ -96,12 +123,22 @@ RCC.TimSysFreq_Value=48000000
 RCC.USART1Freq_Value=48000000
 RCC.USART2Freq_Value=48000000
 RCC.VCOOutput2Freq_Value=8000000
+SH.COMP_DAC1_group.0=DAC_OUT1,DAC_OUT1
+SH.COMP_DAC1_group.ConfNb=1
+TIM2.Channel-Output\ Compare1\ No\ Output=TIM_CHANNEL_1
+TIM2.IPParameters=Period,TIM_MasterOutputTrigger,Channel-Output Compare1 No Output
+TIM2.Period=2172
+TIM2.TIM_MasterOutputTrigger=TIM_TRGO_OC1
 USB_DEVICE.CLASS_NAME_FS=AUDIO
 USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS
 USB_DEVICE.VirtualMode=Audio
 USB_DEVICE.VirtualModeFS=Audio_FS
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
+VP_TIM2_VS_no_output1.Mode=Output Compare1 No Output
+VP_TIM2_VS_no_output1.Signal=TIM2_VS_no_output1
 VP_USB_DEVICE_VS_USB_DEVICE_AUDIO_FS.Mode=AUDIO_FS
 VP_USB_DEVICE_VS_USB_DEVICE_AUDIO_FS.Signal=USB_DEVICE_VS_USB_DEVICE_AUDIO_FS
 board=custom
